Add GridWorker submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "micro-gameOfLife-webapi"]
 	path = micro-gameOfLife-webapi
 	url = https://github.com/olived19/micro-gameOfLife-webapi.git
+[submodule "micro-gameOfLife-gridworker"]
+	path = micro-gameOfLife-gridworker
+	url = https://github.com/olived19/micro-gameOfLife-gridworker
